Revision history for Perl distribution Test-Class-Moose

0.31
        - Fix bug where sequential tests fail with parallel testing.

0.30 [unrelease]
        - Experimental support for parallel testing. See
          Test::Class::Moose::Role::Parallel.

0.22 2013-08-17
        - Renamed tutorial from .pod to .pm to stop both cpan and metacpan
          from replacing main documentation with the tutorial.

0.21 2013-08-15
        - Fold on .t test into t/tags.t. Cleaner and stops some CPAN testers
          failures.

0.20 2013-08-15
        - Fix bug #87801 where excluded tags were ANDed instead of ORed.
          Stefan Corneliu Petrea.
        - The beginnings of a tutorial by Doug Bell (preaction)
        - Doc fix by Olaf Alders.
        - Tag inheritance added by Paul Boyd (see
          https://github.com/Ovid/test-class-moose/pull/10). This change is
          slightly backwards-incompatible, but not many people were yet using
          this module (or tags).

0.12 2013-05-27
        - Bugfix: test_classes attribute to constructor is allowed to be
          undef or an empty array ref.
        - add_to_plan() is now deprecated. Use plan() instead. This solves the
          problem where you might also have a before modifier wanting to alter
          the plan.

0.11 2013-05-19
        - Added the test_classes attribute to the contructor. Allows you to
          easily control which classes you wish to run.

0.10 2013-05-08
        - Sigh. Skip All tag tests if we can't define tags.

0.09 2013-05-07
        - Emergency bug fix: don't require Sub::Attribute if they cannot load
          it.

0.08 2013-05-06
        - Add tag support.
        - Clean up how start and end times for timing is handled.

0.07 2013-04-07
        - The $test_suite object now has the time() method.
        - Fully document report methods
        - Marked a bunch of "trusted" methods as effectively private.
        - Rename tests_run() to num_tests_run() (internal consistency)